--- a/storefront-child/package.json
+++ b/storefront-child/package.json
@@ -11,6 +11,7 @@
     "gulp-clean": "^0.4.0",
     "gulp-concat": "^2.6.1",
     "gulp-cssnano": "^2.1.3",
+    "gulp-dart-sass": "^1.1.0",
     "gulp-imagemin": "^7.1.0",
     "gulp-livereload": "^4.0.2",
     "gulp-minify-css": "^1.2.4",
